--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="navbar-header"> <a class="navbar-brand">高中人教版单词发音系统</a></div>
             <div>
                 <ul class="nav navbar-nav">
-                    <li class="dropdown"> <button class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         必修一<b class="caret"></b>
                     </button>
                         <ul class="dropdown-menu">
@@ -25,9 +25,9 @@
                             <li><a name="1_4" class="a_labek">Unit 4</a></li>
                             <li><a name="1_5" class="a_labek">Unit 5</a></li>
                         </ul></li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         必修二<b class="caret"></b>
-                    </a>
+                    </button>
                         <ul class="dropdown-menu">
                             <li><a name="2_1" class="a_labek">Unit 1</a></li>
                             <li><a name="2_2" class="a_labek">Unit 2</a></li>
@@ -35,9 +35,9 @@
                             <li><a name="2_4" class="a_labek">Unit 4</a></li>
                             <li><a name="2_5" class="a_labek">Unit 5</a></li>
                         </ul></li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         必修三<b class="caret"></b>
-                    </a>
+                    </button>
                         <ul class="dropdown-menu">
                             <li><a name="3_1" class="a_labek">Unit 1</a></li>
                             <li><a name="3_2" class="a_labek">Unit 2</a></li>
@@ -45,9 +45,9 @@
                             <li><a name="3_4" class="a_labek">Unit 4</a></li>
                             <li><a name="3_5" class="a_labek">Unit 5</a></li>
                         </ul></li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         必修四<b class="caret"></b>
-                    </a>
+                    </button>
                         <ul class="dropdown-menu">
                             <li><a name="4_1" class="a_labek">Unit 1</a></li>
                             <li><a name="4_2" class="a_labek">Unit 2</a></li>
@@ -55,9 +55,9 @@
                             <li><a name="4_4" class="a_labek">Unit 4</a></li>
                             <li><a name="4_5" class="a_labek">Unit 5</a></li>
                         </ul></li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         必修五<b class="caret"></b>
-                    </a>
+                    </button>
                         <ul class="dropdown-menu">
                             <li><a name="5_1" class="a_labek">Unit 1</a></li>
                             <li><a name="5_2" class="a_labek">Unit 2</a></li>
@@ -65,9 +65,9 @@
                             <li><a name="5_4" class="a_labek">Unit 4</a></li>
                             <li><a name="5_5" class="a_labek">Unit 5</a></li>
                         </ul></li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         选修六<b class="caret"></b>
-                    </a>
+                    </button>
                         <ul class="dropdown-menu">
                             <li><a name="6_1" class="a_labek">Unit 1</a></li>
                             <li><a name="6_2" class="a_labek">Unit 2</a></li>
@@ -75,9 +75,9 @@
                             <li><a name="6_4" class="a_labek">Unit 4</a></li>
                             <li><a name="6_5" class="a_labek">Unit 5</a></li>
                         </ul></li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         选修七<b class="caret"></b>
-                    </a>
+                    </button>
                         <ul class="dropdown-menu">
                             <li><a name="7_1" class="a_labek">Unit 1</a></li>
                             <li><a name="7_2" class="a_labek">Unit 2</a></li>
@@ -85,9 +85,9 @@
                             <li><a name="7_4" class="a_labek">Unit 4</a></li>
                             <li><a name="7_5" class="a_labek">Unit 5</a></li>
                         </ul></li>
-                    <li class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown">
+                    <li class="dropdown"> <button class="dropdown-toggle btn btn-success" data-toggle="dropdown">
                         选修八<b class="caret"></b>
-                    </a>
+                    </button>
                         <ul class="dropdown-menu">
                             <li><a name="8_1" class="a_labek">Unit 1</a></li>
                             <li><a name="8_2" class="a_labek">Unit 2</a></li>
